language/move-lang/tests/move_check/unit_test/attribute_location_invalid.exp
error[E10005]: unable to generate test
  ┌─ tests/move_check/unit_test/attribute_location_invalid.move:1:3
  │
1 │ #[test_only]
  │   ^^^^^^^^^ Testing attributes are not allowed in scripts.

